# skupper-prometheus-collector

./: Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml
.tekton/: skupper-prometheus-collector-pull-request.yaml  skupper-prometheus-collector-push.yaml
skupper_prometheus_collector/: __main__.py  collector.py  config.py
tests/: conftest.py  test_collector.py
tests/fixtures/: stats.json
