[tool.poetry]
name = "skupper-prometheus-collector"
version = "0.1.0"
description = "Custom prometheus collector for Skupper (skupper.io)"
authors = ["Christian Assing <cassing@redhat.com>"]
license = "Apache"
readme = "README.md"
packages = [{ include = "skupper_prometheus_collector" }]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0.0"
prometheus-client = "^0.15.0"
pydantic = "^1.10.2"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.11.2"
flake8 = "^6.0.0"
black = "^22.12.0"
commitizen = "^2.38.0"
pytest = "^7.2.0"
types-requests = "^2.28.11.5"
httpretty = "^1.1.4"
debugpy = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skupper-prometheus-collector = "skupper_prometheus_collector.__main__:app"

[tool.mypy]
plugins = "pydantic.mypy"
enable_error_code = "truthy-bool, redundant-expr"
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["httpretty"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
major_version_zero = true
change_type_map = { "feat" = "Features", "fix" = "Bug Fixes" }
tag_format = "v$version"

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
float_to_top = true
